--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.3.6,
+* Autoprefixer: v10.3.1
+* Browsers: last 4 version
+*/
+
 .body-color{
     background-color: #F8F8F8;
 }
@@ -12,6 +19,8 @@ header-fix{
 .container{
     width: 1920px;
     margin: 0 auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 100%;
     /* border-radius: 229px;
@@ -29,13 +38,18 @@ header-fix{
     color: #4B647E;   
 
 }
-.nav{display: flex;
-    justify-content: space-evenly;
+.nav{display: -webkit-box;display: -ms-flexbox;display: flex;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
 
 }
 .nav{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-self: space-evenly;
+    -ms-grid-column-align: space-evenly;
+        justify-self: space-evenly;
 }
 .nav-li{
     font-size: 22px;
@@ -62,9 +76,15 @@ header-fix{
     border-radius: 40px;
     margin-top: 85px;
     margin-left: 121px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .chaild-left-p{
     font-size: 23px;
@@ -91,15 +111,23 @@ header-fix{
     font-size: 18px;
 }
 .firs-line{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     padding-top: 67px;
     padding-left: 375px;
     
 }
 .second-line{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     margin-top: 60px;   
     padding-top: 60px;
     padding-left: 375px;
@@ -110,21 +138,33 @@ header-fix{
     height: 450px;
     background-color: #FBBA77;
     margin-left: 30px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;    
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-align: center;    
+        -ms-flex-align: center;    
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
 .child-box2{
     width: 370px;
     height: 450px;
     margin-left: 30px;
     background-color: #4386D2;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;    
-    align-items: center;
-    flex-direction: column;
+    -webkit-box-align: center;    
+        -ms-flex-align: center;    
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
 }
-
-
 
 .child-box:nth-child(2){
     background-color: #41EAE3;
@@ -149,9 +189,15 @@ background-color: #A5A2F6;
     height:45px ;
     background-color: #FFFFFF;
     border-radius: 45px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 20px;
 
 }
@@ -175,9 +221,15 @@ background-color: #A5A2F6;
     height:45px ;
     border-radius: 45px;
     border: 1px solid white;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin-top: 20px;   
 
 }
